[metadata]
name = chasm_engine
description = The game engine (server) for Chasm, a multi-player text adventure driven by large language models.
url = https://github.com/atisharma/chasm_engine
author = Ati Sharma
author_email = ati.sharma+chasm@agalmic.ltd
keywords = chasm, text adventure, interactive fiction
license = GNU AFFERO GENERAL PUBLIC LICENSE V3
license_files = LICENSE
long_description = file: README.md


[options]
python_requires = >= 3.10
install_requires = file: requirements.txt
include_package_data = True
package_dir = 
packages = find:

[options.entry_points]
console_scripts =
    chasm-engine = chasm_engine.cli:chasm

[options.packages.find]
where = 

[options.package_data]
* = *.hy
